fix deprecation jdk 17