@@ -732,7 +732,7 @@ public class DataseerClassifier {
                                     JsonNode noDatasetNode = classificationNode.findPath("no_dataset");
                                     JsonNode textNode = classificationNode.findPath("text");
 
-                                    Boolean localResult = new Boolean(false);
+                                    Boolean localResult = Boolean.valueOf(false);
                                     if ((datasetNode != null) && (!datasetNode.isMissingNode()) &&
                                         (noDatasetNode != null) && (!noDatasetNode.isMissingNode()) ) {
                                         double probDataset = datasetNode.asDouble();
@@ -849,7 +849,7 @@ public class DataseerClassifier {
                                             datasetMap.put("dataset-"+dataSetId, Pair.of(bestDataTypeWithProb.getLeft(), null));
                                             dataInstanceMap.put("dataInstance-"+dataSetId, "dataset-"+dataSetId);
                                             dataInstanceScoreMap.put("dataInstance-"+dataSetId, bestDataTypeWithProb.getRight());
-                                            dataInstanceReuseMap.put("dataInstance-"+dataSetId, new Boolean(isReuse));
+                                            dataInstanceReuseMap.put("dataInstance-"+dataSetId, Boolean.valueOf(isReuse));
                                             dataSetId++;
 
                                             // we also need to add a dataseer subtype attribute to the parent <div>
@@ -1031,7 +1031,7 @@ public class DataseerClassifier {
                 bestDataType = className;
             }
         }
-        return Pair.of(bestDataType, new Double(bestProb));
+        return Pair.of(bestDataType, Double.valueOf(bestProb));
     }
 
     private boolean getReuseInfo(JsonNode classificationsNode) {
