@@ -101,7 +101,7 @@ public class DataseerLexicon {
                     continue;
                 }
 
-                termIDF.put(term, new Double(idf));
+                termIDF.put(term, Double.valueOf(idf));
             }
         } catch (FileNotFoundException e) {
             throw new GrobidException("SoftwareLexicon file not found.", e);
