@@ -346,7 +346,7 @@ public class DataseerProcessFile {
                                 }
                                 json.append("}");
                             }
-                            serializedKeys.add(new Integer(refKey));
+                            serializedKeys.add(Integer.valueOf(refKey));
                         }
                     }
                 }
