@@ -202,7 +202,7 @@ public class AnnotatedCorpusGeneratorCSV {
                             if (localSentence.equals(sentence)) {
                                 totalMatchedAnnotations++;
                                 System.out.println("matched sentence!");
-                                solvedAnnotations.add(new Integer(k));
+                                solvedAnnotations.add(Integer.valueOf(k));
                                 // add annotation attributes to the DOM sentence
 
                                 break;
@@ -535,7 +535,7 @@ public class AnnotatedCorpusGeneratorCSV {
 
                                 totalMatchedAnnotations++;
                                 //System.out.println("matched sentence! " + sentence);
-                                solvedAnnotations.add(new Integer(k));
+                                solvedAnnotations.add(Integer.valueOf(k));
 
                                 if (!docMatchedSentences.contains(sentenceSimplified)) {
                                     docMatchedSentences.add(sentenceSimplified);
